--- a/oblig2og3/html/logginn.html
+++ b/oblig2og3/html/logginn.html
@@ -1,72 +1,51 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Student Stopp</title>
+    <title>Logg inn</title>
     <meta charset="UTF-8">
-    <link href="css/studentstopp.css" rel="stylesheet" type="text/css">       <!-- Design -->
-    <link href="print.css" rel="stylesheet" type="text/css">             <!-- Print ark -->
-   	<script src="js/studentstopp.js"></script>       <!-- Programeringen til "registrering -->
-   	<link href="rss.xml" type="application/rss+xml" rel="alternate" title="rss" />  <!-- RSS feed -->
-	<link href="rss.css" rel="stylesheet" type="text/css">
+    <link href="responsivt.css" rel="stylesheet" type="text/css"/>
+    <link href="print.css" rel="stylesheet" type="text/css"/>
+    <link rel="shortcut icon" type="image/png" href="studentstopp.png"/>
+    <script src="logginn.js"></script>
 </head>
-<body class="blogg">
-	<header class="navigasjonsmeny">
-        <img src="bilder/studentstopp.jpg" alt="Logoen til Student Stopp" class="logo"/>
+<body>
+  <header class="navigasjonsmeny">
+        <a class="aLogo" href="http://www.it-stud.hiof.no/~mortenok/wuoblig3/studentstopp/"><img src="studentstopp.png" alt="Logoen til Student Stopp" class="logo"/></a>
         <nav>
-            <ul>
+            <ul class="ulNavigasjon">
                 <li class="liNavigasjon"><a class="aLiNavigasjon" href="omstudentstopp.html">Om Student Stopp</a></li>
                 <li class="liNavigasjon"><a class="aLiNavigasjon" href="logginn.html">Logg inn</a></li>
-                <li class="liNavigasjon"><a class="aLiNavigasjon" href="registrer.html">Registrer</a></li>
+                <li class="liNavigasjon"><a class="aLiNavigasjon" href="registrer.html">Registrer deg</a></li>
             </ul>
         </nav>
     </header>
-    <main class="logg">
-      Brukernavn:
-        <input type="text" id="txtBruker" /> <!--Bruker navn box -->
-          <br /><br />
-      Passord:
-        <input type="password" id="txtPass" /> <!-- Passord box -->
-          <br /><br />
-        <button type="button" id="btnLogg">Registrering</button> <!-- Registrerings knapp -->
-          <p id="print">Logg inn med brukernavn og passord</p> <!-- Utskrift -->
+    <main>
+        <section class="mainBakgrunnsbilete">
+            <a class="btnNavigasjon" href="index.html"><button class="btnTilPassasjer" type="button">Finn reise</button></a>
+            <a class="btnNavigasjon" href="leiuttur.html"><button class="btnTilSjaafor" type="button">Lei ut reise</button></a>
+            <article class="mainSkjemaLoggInn">
+                <h1 class="mainSectionOverskrift">Logg inn</h1>
+                <section class="mainSectionLoggInn">
+                    <p>Brukernavn:</p>
+                    <input class="mainLoggInn" type="text" placeholder="Brukernavn" />
+                    <p>Passord:</p>
+                    <input class="mainLoggInn" type="password" placeholder="Passord" />
+                    <button id="btnLoggInn" class="mainBtnLoggInn" type="button">Logg inn</button>
+                    <p class="txtTilbakemeldingLoggInn"></p>
+                </section>
+            </article>
+        </section>
     </main>
     <footer>
-         <svg id="svg1" xmls="http://www.w3.org/2000/svg" width="0" height="0">
-  <img src="rssLogo.svg" width="64px" height="64px" onerror="this.src='rssBackupLogo.png'">
-</svg>
-<svg id="svg2" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-  <img src="twitterLogo.svg" width="64px" height="64px" onerror="this.src='twitterLogo2.png'">
-</svg>
-<!--Twitter logo er til illustrering. Vi vil ha twitter/face sider på en "virkelig" versjon
-av nettsiden vår -->
-<svg id="svg3" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-    <img src="facebookHomeLogo.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
-</svg><br>
-<?xml version="1.0" encoding="UTF-8" ?>
-
-<rss version="2.0">
-
-<channel>
-  <item>
-  <title>Student Stopp</title>
-  <link>http://www.it-stud.hiof.no/mortenok/wuobli3/studentstopp/</link>
-  <description>Nyhetsfeed fra Student Stopp</description>
-  <language>no</language>
-  <pubDate>Mon,12 Oct 2016 12:00 GMT</pubDate>
-  </item>
-  <item>
-  <title>Siste nytt fra Student Stopp</title>
-  <link>http://www.it-stud.hiof.no/mortenok/wuoblig3/studentstopp/</link>
-  <description>Her finner du de siste hendelsene på Student Stop</description>
-  </item>
-  <item>
-  <title>Nyhet om samkjøring fra HIØ</title>
-  <link>http://www.hiof.no</link>
-  <description>Nyheter om samkjøring fra HiØ.</description>
-  </item>
-</channel>
-</rss>
-        <p class="forfatter"></p>
+        <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
+            <img src="facebook.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
+        </svg>
+        <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
+            <img src="twitter.svg" width="64" height="64" onerror="this.src='twitterLogo2.png'">
+        </svg>
+        <svg class="footerSvg" xmls="http://www.w3.org/2000/svg" width="0" height="0">
+            <img src="rss.svg" width="64" height="64" onerror="this.src='rssBackupLogo.png'">
+        </svg>
     </footer>
 </body>
 </html>
