--- a/oblig2og3/html/logginn.html
+++ b/oblig2og3/html/logginn.html
@@ -38,13 +38,13 @@
     </main>
     <footer>
         <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-            <img src="facebook.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
+            <img src="facebook.svg" width="64" height="64" alt="facebook">
         </svg>
         <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-            <img src="twitter.svg" width="64" height="64" onerror="this.src='twitterLogo2.png'">
+            <img src="twitter.svg" width="64" height="64">
         </svg>
         <svg class="footerSvg" xmls="http://www.w3.org/2000/svg" width="0" height="0">
-            <img src="rss.svg" width="64" height="64" onerror="this.src='rssBackupLogo.png'">
+            <img src="rss.svg" width="64" height="64">
         </svg>
     </footer>
 </body>
