--- a/oblig2og3/html/registrer.html
+++ b/oblig2og3/html/registrer.html
@@ -23,6 +23,7 @@
       <section class="mainBakgrunnsbilete">
         <a class="btnNavigasjon" href="index.html"><button class="btnTilPassasjer" type="button">Finn reise</button></a>
         <a class="btnNavigasjon" href="leiuttur.html"><button class="btnTilSjaafor" type="button">Lei ut reise</button></a>
+      </section>
         <article class="mainSkjemaRegistrer">
           <h1 class="mainSectionOverskrift">Registrer deg</h1>
           <section class="mainSectionLoggInn">
@@ -37,17 +38,10 @@
           </section>
         </article>
     </main>
-    </section>
     <footer>
-      <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-        <img src="facebook.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
-    </svg>
-    <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-        <img src="twitter.svg" width="64" height="64" onerror="this.src='twitterLogo2.png'">
-    </svg>
-    <svg class="footerSvg" xmls="http://www.w3.org/2000/svg" width="0" height="0">
-        <img src="rss.svg" width="64" height="64" onerror="this.src='rssBackupLogo.png'">
-    </svg>
+        <img src="facebook.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'" alt="facebook">
+        <img src="twitter.svg" width="64" height="64" onerror="this.src='twitterLogo2.png'" alt="twitter">
+        <img src="rss.svg" width="64" height="64" onerror="this.src='rssBackupLogo.png'" alt="rss">
     </footer>
 </body>
 </html>
