--- a/oblig2og3/html/logginn.html
+++ b/oblig2og3/html/logginn.html
@@ -37,15 +37,9 @@
         </section>
     </main>
     <footer>
-        <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
             <img src="facebook.svg" width="64" height="64" alt="facebook">
-        </svg>
-        <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-            <img src="twitter.svg" width="64" height="64">
-        </svg>
-        <svg class="footerSvg" xmls="http://www.w3.org/2000/svg" width="0" height="0">
-            <img src="rss.svg" width="64" height="64">
-        </svg>
+            <img src="twitter.svg" width="64" height="64" alt="twitter">
+            <img src="rss.svg" width="64" height="64" alt="rss">
     </footer>
 </body>
 </html>
