--- a/oblig2og3/html/registrert.html
+++ b/oblig2og3/html/registrert.html
@@ -27,18 +27,12 @@
           <p class="mainPResultat">Du er nå registrert på sida.</p>
           <a class="mainPResultat" href="index.html">Til framsida</a>
         </article>
+      </section>
     </main>
-    </section>
     <footer>
-      <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-        <img src="facebook.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
-    </svg>
-    <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-        <img src="twitter.svg" width="64" height="64" onerror="this.src='twitterLogo2.png'">
-    </svg>
-    <svg class="footerSvg" xmls="http://www.w3.org/2000/svg" width="0" height="0">
-        <img src="rss.svg" width="64" height="64" onerror="this.src='rssBackupLogo.png'">
-    </svg>
+        <img src="facebook.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'" alt="facebook">
+        <img src="twitter.svg" width="64" height="64" onerror="this.src='twitterLogo2.png'" alt="twitter">
+        <img src="rss.svg" width="64" height="64" onerror="this.src='rssBackupLogo.png'" alt="rss">
     </footer>
 </body>
 </html>
