--- a/oblig2og3/html/omstudentstopp.html
+++ b/oblig2og3/html/omstudentstopp.html
@@ -20,8 +20,8 @@
     </header>
     <main>
     	<section class="mainBakgrunnsbilete">
-            <a class="btnNavigasjon" href="index.html"><button class="btnTilPassasjer" type="button">Finn reise</button></a>
-            <a class="btnNavigasjon" href="leiuttur.html"><button class="btnTilSjaafor" type="button">Lei ut reise</button></a>
+            <a class="btnNavigasjon" href="index.html"></a><button class="btnTilPassasjer" type="button">Finn reise</button>
+            <a class="btnNavigasjon" href="leiuttur.html"></a><button class="btnTilSjaafor" type="button">Lei ut reise</button>
             <article class="mainSkjemaOmStudentStopp">
                 <h1 class="mainSectionOverskrift">Om Student Stopp</h1>
                 <p class="mainPInfo">
@@ -30,7 +30,7 @@
                     sin IT konferanse i Oslo i november.
                 </p>
                 <p class="mainPInfo">
-                    Er du student ved <a href=http://www2.hiof.no/nor/hogskolen-i-ostfold/studiestart/parkering-halden&PHPSESSID=ink59jgl4414b267cvc4g2nur4>Høgskolen i Østfold</a> og pendler?
+                    Er du student ved <a href="http://www2.hiof.no/nor/hogskolen-i-ostfold/studiestart/parkering-halden&PHPSESSID=link59jgl4414b267cvc4g2nur4">Høgskolen i Østfold</a> og pendler?
                     Da kan <em>Student Stopp</em> gjøre din hverdag enklere! Mange studenter bruker lang tid på å pendle via kollektiv tranport, og avgangene er begrenset. Dette gjør at mange velger å kjøre bil - med mange ledige plasser.
                 </p>
                 <p class="mainPInfo"><strong>
@@ -45,15 +45,9 @@
     	</section>
     </main>
     <footer>
-        <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-            <img src="facebook.svg" width="64" height="64" onerror="this.src='facebookBackupLogo.png'">
-        </svg>
-        <svg class="footerSvg" xmlns="http://www.w3.org/2000/svg" width="0" height="0">
-            <img src="twitter.svg" width="64" height="64" onerror="this.src='twitterLogo2.png'">
-        </svg>
-        <svg class="footerSvg" xmls="http://www.w3.org/2000/svg" width="0" height="0">
-            <img src="rss.svg" width="64" height="64" onerror="this.src='rssBackupLogo.png'">
-        </svg>
+        <img src="facebook.svg" width="64" height="64" alt ="Facebook logo" onerror="this.src='facebookBackupLogo.png'" />
+        <img src="twitter.svg" width="64" height="64" alt="Twitter logo" onerror="this.src='twitterLogo2.png'" />
+        <img src="rss.svg" width="64" height="64" alt="RSS logo" onerror="this.src='rssBackupLogo.png'" />
     </footer>
 </body>
 </html>
